Updates from Overleaf

--- a/exam1.tex
+++ b/exam1.tex
@@ -1,5 +1,5 @@
 \newpage
-\section{期末试题一}
+\section{某年数值分析期末试题}
 \begin{tcolorbox}[breakable,
 		colframe=white!10!jingga, coltitle=white!90!jingga, colback=white!95!jingga, coltext=black, colbacktitle=white!10!jingga, enhanced, fonttitle=\bfseries,fontupper=\normalsize, attach boxed title to top left={yshift=-2mm}, before skip=8pt, after skip=8pt,
 		title=填空题]
@@ -39,11 +39,11 @@ A=\left(\begin{array}{ll}
 \end{array}\right) \\
 \end{array}
 $$
-$$\|A\|_{1}=\max _{1 \leqslant j \leqslant n} \sum_{i=1}^{n}\left|a_{i j}\right|=\max \{1+0,1+1\} 
+$$\|A\|_{1}=\max _{1 \leqslant j \leqslant n} \sum_{i=1}^{n}\left|a_{i j}\right|=\max \{|1|+|0|,|1|+|1|\} 
 =\max \{1,2\}=2 $$
 
-同理 $ \left\|A^{-1}\right\|_{1}=\max \{1+0,-1+1\}=1 $.
-因此 $ \operatorname{cond}_{1}(A)=\left\|A^{-1}\right\|_{1}\|A\|_{1}=2 $.
+同理 $ \left\|A^{-1}\right\|_{1}=\max \{|1|+|0|,|-1|+|1|\}=2 $.
+因此 $ \operatorname{cond}_{1}(A)=\left\|A^{-1}\right\|_{1}\|A\|_{1}=4 $.
 
 (4) 迭代矩阵的谱半径$\rho(B)<1$
 
