--- a/main.tex
+++ b/main.tex
@@ -174,24 +174,27 @@
  \tableofcontents 
 
 
-\input{1}
-\input{2}
-%\input{插值法与曲线拟合}
-\input{3}
-%\input{解线性方程组的直接法}
-\input{4}
-%\input{解线性方程组的迭代法}
-%\input{非线性方程求根}
-\input{5}
+%\input{1}
+%\input{2}
+\input{插值法与曲线拟合}
+%\input{3}
+\input{解线性方程组的直接法}
+%\input{4}
+\input{解线性方程组的迭代法}
+\input{非线性方程求根}
+%\input{5}
 %
 
 %\input{0}
 %\input{box}
 %\input{w}
-%\input{数值积分与数值微分}
+\input{数值积分与数值微分}
 
-\input{6}
-%\input{常微分方程初值问题的数值解法}
-\input{期中小测}
+%\input{6}
+\input{常微分方程初值问题的数值解法}
+%\input{期中小测}
 %\input{exam1}
 \end{document}
+
+
+
