--- a/4.tex
+++ b/4.tex
@@ -83,7 +83,7 @@ a_{21} & a_{22}
 \end{array}\right]^{-1}=\frac{1}{a_{11}a_{22}}\left[\begin{array}{cc}
 a_{22} & 0 \\
 -a_{21} & a_{11}
-\end{array}\right]^{-1}$. 由 $ \operatorname{det}\left(\lambda I-B_{G}\right)=\lambda\left(\lambda-\frac{a_{12} a_{21}}{a_{11} a_{12}}\right) $, 计算其特征值 $ \lambda_{1}=0, \lambda_{2}=\frac{a_{12} a_{21}}{a_{11} a_{22}} $, 因此
+\end{array}\right]$. 由 $ \operatorname{det}\left(\lambda I-B_{G}\right)=\lambda\left(\lambda-\frac{a_{12} a_{21}}{a_{11} a_{12}}\right) $, 计算其特征值 $ \lambda_{1}=0, \lambda_{2}=\frac{a_{12} a_{21}}{a_{11} a_{22}} $, 因此
 $$
 \rho\left(B_{G}\right)<1\iff \left|\frac{a_{12} a_{21}}{a_{11} a_{22}}\right|<1
 $$
